maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:2: error: illegal start of statement
override def run() {var x:Int=0; while (!isOverBaggle) {v=random3(); match 
                                                                     ^